--- a/templates/threads.html
+++ b/templates/threads.html
@@ -89,6 +89,10 @@
     }
 
     main.thread {
+      & h2.threads-title {
+        display: none
+      }
+
       & .card:not(:last-of-type) .card_avatar::after {
         content: " ";
         display: block;
@@ -293,7 +297,7 @@
     <div class="back">
       <a href="{{url_for('threads.home')}}">Back</a>
     </div>
-    <h2>Featured threads:</h2>
+    <h2 class="threads-title">Featured threads:</h2>
     {% for thread in threads %}
     {% with thread=thread, parent_id=thread.id, is_thread=threads|length > 1 %}
     {% include "card.html" %}
