--- a/templates/threads.html
+++ b/templates/threads.html
@@ -315,7 +315,7 @@
     {% if tags is defined%}
     <div class="featured-tags">
       {% for tag in tags %}
-      <a class="pill" href="/tag/{{ tag.name }}">
+      <a class="pill" href="{{url_for('threads.tag', id=tag.name) }}">
         <span class="pill-label">{{ tag.statuses_count }}</span>
         {{ tag.name }}
       </a>
