--- a/templates/tag.html
+++ b/templates/tag.html
@@ -151,7 +151,7 @@
           background: rgb(245, 242, 240);
           padding: 0.25em 0.3em;
           border-radius: 5px;
-          display: inline;
+          display: inline-block;
           vertical-align: text-bottom;
         }
 
