--- a/templates/tag.html
+++ b/templates/tag.html
@@ -93,7 +93,8 @@
       }
     }
 
-    .pill {
+    .pill,
+    .hashtag {
       border-radius: 2em;
       background-color: rgba(197, 209, 222, 0.25);
       margin: 0 0.5em 0.5em 0;
@@ -284,7 +285,8 @@
         }
       }
 
-      .pill {
+      .pill,
+      .hashtag {
         background-color: rgba(0, 0, 0, 0.15);
         color: var(--text-color-light-faded);
 
