feat: use enhance-content to style and manipulate content tags

--- a/templates/card.html
+++ b/templates/card.html
@@ -24,7 +24,10 @@
     </div>
 
     <div class="body">
-      {{thread.content | safe}}
+
+      <enhance-content data-server={{server}} data-tag-url={{url_for('threads.tag', id='' )}}>
+        {{thread.content | safe}}
+      </enhance-content>
       {% for media in thread.media_attachments %}
       {% if media.type == 'image'%}
       <a href="{{ media.url }}">
