--- a/templates/threads.html
+++ b/templates/threads.html
@@ -22,8 +22,9 @@
     import TimeAgo from 'https://esm.sh/v135/@github/relative-time-element@4.4.0'
   </script>
 
-  <link rel="stylesheet" href="{{ url_for('threads.static', filename='variables.css') }}" />
-  <link rel="stylesheet" href="{{ url_for('threads.static', filename='reset.css') }}" />
+  <!-- Use parent app's variables & reset stylesheets -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='variables.css') }}" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='reset.css') }}" />
   <style>
     html {
       scroll-behavior: smooth;
