--- a/templates/_tag.html
+++ b/templates/_tag.html
@@ -49,6 +49,16 @@
       }
     }
 
+    header {
+      & a.app-title {
+        text-decoration: none;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+
     header,
     footer {
       background: var(--ayo-gradient);
@@ -306,7 +316,9 @@
   <a id="top"></a>
   <header>
     {% include "nav.html" %}
-    <h1>{{ app.title }}</h1>
+    <a class="app-title" href="{{url_for('threads.home')}}">
+      <h1>{{ app.title }}</h1>
+    </a>
     <p>{{ app.description }}</p>
   </header>
   <main class={{ "thread" if threads|length==1 else "home" }}>
